--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
                         <div class="bg-white dark:bg-gray-900 p-6 rounded-2xl shadow-lg flex flex-col h-full">
                             <h3 class="text-2xl font-bold mb-6 text-gray-800 dark:text-white">Segunda</h3>
                             <div class="space-y-4 text-left flex-grow">
-                                <div><p class="font-semibold text-gray-800 dark:text-gray-200">Morro Grande:</p><p class="text-sm text-gray-700 dark:text-gray-300">19h00 - Culto Público</p></div>
-                                <div><p class="font-semibold text-gray-800 dark:text-gray-200">Rincão:</p><p class="text-sm text-gray-700 dark:text-gray-300">19h00 - Culto com as Irmãs</p></div>
-                                <div><p class="font-semibold text-gray-800 dark:text-gray-200">Pág. IEP A Fonte de Deus:</p><p class="text-sm text-gray-700 dark:text-gray-300">23h45 - Live do Pastor</p></div>
+                                <div><p class="font-semibold text-gray-800 dark:text-gray-200">Todas as igrejas:</p><p class="text-sm text-gray-700 dark:text-gray-300">Não haverá culto</p></div>
                             </div>
                         </div>
                     </div>
@@ -159,7 +157,6 @@
                         <div class="bg-white dark:bg-gray-900 p-6 rounded-2xl shadow-lg flex flex-col h-full">
                             <h3 class="text-2xl font-bold mb-6 text-amber-500">Terça</h3>
                             <div class="space-y-4 text-left flex-grow">
-                                 <div><p class="font-semibold text-gray-800 dark:text-gray-200">Pág. IEP A Fonte de Deus:</p><p class="text-sm text-gray-700 dark:text-gray-300">15h00 - Live do Pastor</p></div>
                                  <div><p class="font-semibold text-gray-800 dark:text-gray-200">Canta Galo:</p><p class="text-sm text-gray-700 dark:text-gray-300">19h00 - Culto Público</p></div>
                             </div>
                         </div>
@@ -202,8 +199,8 @@
                             <h3 class="text-2xl font-bold mb-6 text-gray-800 dark:text-white">Sábado</h3>
                             <div class="space-y-4 text-left flex-grow">
                                 <div><p class="font-semibold text-gray-800 dark:text-gray-200">Em todas as igrejas:</p><p class="text-sm text-gray-700 dark:text-gray-300">09h00 - Consagração</p></div>
-                                <div><p class="font-semibold text-gray-800 dark:text-gray-200">Canta Galo:</p><p class="text-sm text-gray-700 dark:text-gray-300">10h00 - Curso do Batismo<br>18h30 - Chá das Mulheres</p></div>
                                 <div><p class="font-semibold text-gray-800 dark:text-gray-200">Rincão:</p><p class="text-sm text-gray-700 dark:text-gray-300">15h00 - Tarde da Benção</p></div>
+                                <div><p class="font-semibold text-gray-800 dark:text-gray-200">Canta Galo:</p><p class="text-sm text-gray-700 dark:text-gray-300">18h30 - Chá das Mulheres</p></div>
                             </div>
                         </div>
                     </div>
@@ -231,8 +228,6 @@
                     <button id="prev-eventos" class="p-3 bg-gray-100 dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-110 mr-4 z-10"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg></button>
                     <div id="eventos-carousel-viewport" class="w-full overflow-hidden">
                         <div class="carousel-wrapper flex">
-                            <div class="carousel-item p-4"><div class="bg-gray-50 dark:bg-gray-900 p-6 rounded-2xl shadow-lg h-full"><p class="text-sm text-gray-700 dark:text-gray-300 font-bold mb-2">29 de Novembro de 2025 - 10h00</p><h3 class="text-xl font-bold mb-2">Curso do Batismo</h3><p class="text-gray-700 dark:text-gray-300">Curso dedicado aqueles que irão se batizar.<br>Filial Canta Galo</p></div></div>
-                            <div class="carousel-item p-4"><div class="bg-gray-50 dark:bg-gray-900 p-6 rounded-2xl shadow-lg h-full"><p class="text-sm text-gray-700 dark:text-gray-300 font-bold mb-2">30 de Novembro de 2025 - 09h00</p><h3 class="text-xl font-bold mb-2">Batismo</h3><p class="text-gray-700 dark:text-gray-300">Batismo nas águas realizado por nosso pastor Jesus Magalhães.</p></div></div>
                             <div class="carousel-item p-4"><div class="bg-gray-50 dark:bg-gray-900 p-6 rounded-2xl shadow-lg h-full"><p class="text-sm text-gray-700 dark:text-gray-300 font-bold mb-2">6 de Dezembro de 2025 - 18h30</p><h3 class="text-xl font-bold mb-2">Chá das Mulheres</h3><p class="text-gray-700 dark:text-gray-300">Um encontro com palavra, louvor e comunhão, apenas para as varoas.<br>Filial Canta Galo</p></div></div>
                             <div class="carousel-item p-4"><div class="bg-gray-50 dark:bg-gray-900 p-6 rounded-2xl shadow-lg h-full"><p class="text-sm text-gray-700 dark:text-gray-300 font-bold mb-2">13 de Dezembro de 2025 - 18h00</p><h3 class="text-xl font-bold mb-2">Santa Ceia</h3><p class="text-gray-700 dark:text-gray-300">Celebração do pão e do vinho em representação ao sangue e corpo de cristo.<br>Filial Canta Galo</p></div></div>
                             <div class="carousel-item p-4"><div class="bg-gray-50 dark:bg-gray-900 p-6 rounded-2xl shadow-lg h-full"><p class="text-sm text-gray-700 dark:text-gray-300 font-bold mb-2">20 de Dezembro de 2025 - 18h30</p><h3 class="text-xl font-bold mb-2">Culto de Ação de Graças Local</h3><p class="text-gray-700 dark:text-gray-300">Culto local de ação de graças para agradecer a Deus pelo ano.<br>Filial Rincão</p></div></div>
