--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -14,13 +14,14 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        /* Container de vídeo responsivo (16:9) funciona para YouTube e Facebook */
         .video-container {
             position: relative;
-            padding-bottom: 56.25%; /* 16:9 */
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
             height: 0;
             overflow: hidden;
-            border-radius: 1rem;
-            background-color: #000;
+            border-radius: 0.5rem; /* rounded-lg */
+            background-color: #000; /* Fundo preto enquanto carrega */
         }
         .video-container iframe {
             position: absolute;
@@ -28,6 +29,7 @@
             left: 0;
             width: 100%;
             height: 100%;
+            border: 0;
         }
     </style>
 </head>
@@ -36,7 +38,7 @@
     <!-- Header -->
     <header class="bg-white dark:bg-gray-800 shadow-md sticky top-0 z-40 transition-colors duration-300">
         <nav class="container mx-auto px-6 py-1 relative flex justify-center items-center">
-            <a href="https://iepafontededeus.com.br" class="popup-link">
+            <a href="index.html" class="popup-link">
                 <img src="https://image.openwave.net.br/image/c70a40f5-8d46-4d18-aa40-483d20a2ae06.png" alt="Logo IEP A Fonte de Deus" class="h-20 w-auto rounded-lg">
             </a>
             <button id="menu-button" class="absolute right-6 p-2 rounded-full text-gray-600 hover:bg-gray-100 dark:hover:bg-gray-700 transition duration-300 z-50">
@@ -76,61 +78,117 @@
     <main class="flex-grow">
         <section class="py-10 md:py-16 bg-gray-100 dark:bg-black text-center">
             <div class="container mx-auto px-4">
-                <div class="mb-8">
-                    <span class="inline-block py-1 px-3 rounded-full bg-red-600 text-white text-xs font-bold tracking-wider uppercase mb-4 animate-pulse">Estamos no Ar</span>
-                    <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-gray-900 dark:text-white">Culto Ao Vivo</h1>
+                <div class="mb-10">
+                    <span class="inline-block py-1 px-3 rounded-full bg-red-600 text-white text-xs font-bold tracking-wider uppercase mb-4 animate-pulse">Transmissões</span>
+                    <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-gray-900 dark:text-white">Cultos Ao Vivo</h1>
                     <p class="text-xl text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">
                         Acompanhe a transmissão da Palavra de Deus e adore conosco onde você estiver.
                     </p>
-                </div>
-
-                <!-- Player de Vídeo Principal -->
-                <div class="max-w-4xl mx-auto shadow-2xl rounded-2xl overflow-hidden border-4 border-white dark:border-gray-800">
-                    <div class="video-container">
-                        <!-- IMPORTANTE: Substitua 'LIVE_VIDEO_ID' pelo ID da transmissão ao vivo atual ou use o link do canal para live 'https://www.youtube.com/embed/live_stream?channel=CHANNEL_ID' -->
-                        <iframe src="https://www.youtube.com/embed/live_stream?channel=UC-9-kyTW8ZkZNDHQJ6FgpwQ" title="Culto Ao Vivo IEP A Fonte de Deus" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    
+                    <!-- Botões de Ação -->
+                    <div class="mt-8 flex flex-col sm:flex-row justify-center gap-4">
+                        <a href="https://iepafontededeus.com.br/contribuicao/" class="inline-flex items-center justify-center px-8 py-4 text-base font-bold text-gray-900 bg-amber-500 rounded-lg hover:bg-amber-400 transition duration-300 shadow-lg">
+                            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                            Quero Ofertar
+                        </a>
+                        <a href="https://iepafontededeus.com.br/#programacao" class="inline-flex items-center justify-center px-8 py-4 text-base font-bold text-white bg-blue-600 rounded-lg hover:bg-blue-500 transition duration-300 shadow-lg">
+                            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                            Horário dos Cultos
+                        </a>
                     </div>
                 </div>
 
-                <!-- Botões de Ação -->
-                <div class="mt-10 flex flex-col sm:flex-row justify-center gap-4">
-                    <a href="https://iepafontededeus.com.br/contribuicao/" class="inline-flex items-center justify-center px-8 py-4 text-base font-bold text-gray-900 bg-amber-500 rounded-lg hover:bg-amber-400 transition duration-300 shadow-lg">
-                        <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        Quero Ofertar
-                    </a>
-                    <a href="https://wa.me/5511999999999" target="_blank" class="inline-flex items-center justify-center px-8 py-4 text-base font-bold text-white bg-green-600 rounded-lg hover:bg-green-500 transition duration-300 shadow-lg">
-                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.466c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/></svg>
-                        Pedir Oração
-                    </a>
+                <!-- Grid de Transmissões (2x2) -->
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
+
+                    <!-- 1. FILIAL CANTA GALO -->
+                    <div class="bg-white dark:bg-gray-900 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-800">
+                        <div class="p-4 bg-amber-500 text-gray-900 font-bold text-lg flex justify-between items-center">
+                            <span>Filial Canta Galo</span>
+                            <div class="flex gap-2">
+                                <!-- Ícone Facebook -->
+                                <svg class="w-5 h-5 text-blue-700" fill="currentColor" viewBox="0 0 24 24"><path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"/></svg>
+                                <!-- Ícone YouTube -->
+                                <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <div class="video-container">
+                                <!-- PARA YOUTUBE:
+                                     Cole aqui: <iframe src="https://www.youtube.com/embed/SEU_ID" ...></iframe> 
+                                -->
+                                <!-- PARA FACEBOOK:
+                                     Cole aqui: <iframe src="https://www.facebook.com/plugins/video.php?href=..." ...></iframe>
+                                -->
+                                <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
+                                    <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 2. FILIAL RINCÃO -->
+                    <div class="bg-white dark:bg-gray-900 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-800">
+                        <div class="p-4 bg-amber-500 text-gray-900 font-bold text-lg flex justify-between items-center">
+                            <span>Filial Rincão</span>
+                            <div class="flex gap-2">
+                                <!-- Ícone Facebook -->
+                                <svg class="w-5 h-5 text-blue-700" fill="currentColor" viewBox="0 0 24 24"><path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"/></svg>
+                                <!-- Ícone YouTube -->
+                                <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <div class="video-container">
+                                <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
+                                    <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 3. FILIAL MORRO GRANDE -->
+                    <div class="bg-white dark:bg-gray-900 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-800">
+                        <div class="p-4 bg-amber-500 text-gray-900 font-bold text-lg flex justify-between items-center">
+                            <span>Filial Morro Grande</span>
+                            <div class="flex gap-2">
+                                <!-- Ícone Facebook -->
+                                <svg class="w-5 h-5 text-blue-700" fill="currentColor" viewBox="0 0 24 24"><path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"/></svg>
+                                <!-- Ícone YouTube -->
+                                <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <div class="video-container">
+                                <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
+                                    <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!-- 4. CULTOS ESPECIAIS / EXTRA -->
+                    <div class="bg-white dark:bg-gray-900 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-800">
+                        <div class="p-4 bg-amber-500 text-gray-900 font-bold text-lg flex justify-between items-center">
+                            <span>Cultos Especiais / Extra</span>
+                             <div class="flex gap-2">
+                                <svg class="w-5 h-5 text-blue-700" fill="currentColor" viewBox="0 0 24 24"><path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"/></svg>
+                                <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <div class="video-container">
+                                <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
+                                    <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
+
             </div>
         </section>
-
-        <!-- Horários das Transmissões -->
-        <section class="py-12 bg-white dark:bg-gray-900">
-             <div class="container mx-auto px-6 text-center">
-                <h3 class="text-2xl font-bold mb-6 text-gray-900 dark:text-white">Horários das Transmissões</h3>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-4xl mx-auto">
-                    <div class="p-4 rounded-xl bg-gray-50 dark:bg-gray-800">
-                        <p class="font-bold text-amber-500">Segunda-feira</p>
-                        <p class="text-gray-600 dark:text-gray-400">23h45 - Live do Pastor</p>
-                    </div>
-                    <div class="p-4 rounded-xl bg-gray-50 dark:bg-gray-800">
-                        <p class="font-bold text-amber-500">Terça-feira</p>
-                        <p class="text-gray-600 dark:text-gray-400">15h00 - Live do Pastor</p>
-                    </div>
-                    <div class="p-4 rounded-xl bg-gray-50 dark:bg-gray-800">
-                        <p class="font-bold text-amber-500">Quarta-feira</p>
-                        <p class="text-gray-600 dark:text-gray-400">19h00 - Culto Público</p>
-                    </div>
-                    <div class="p-4 rounded-xl bg-gray-50 dark:bg-gray-800">
-                        <p class="font-bold text-amber-500">Domingo</p>
-                        <p class="text-gray-600 dark:text-gray-400">18h00 - Culto da Família</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
     </main>
 
     <!-- Footer -->
