--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -140,6 +140,12 @@
                         </div>
                         <div class="p-4">
                             <div class="video-container">
+                                 <!-- PARA YOUTUBE:
+                                     Cole aqui: <iframe src="https://www.youtube.com/embed/SEU_ID" ...></iframe> 
+                                -->
+                                <!-- PARA FACEBOOK:
+                                     Cole aqui: <iframe src="https://www.facebook.com/plugins/video.php?href=..." ...></iframe>
+                                -->
                                 <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
@@ -160,6 +166,12 @@
                         </div>
                         <div class="p-4">
                             <div class="video-container">
+                                <!-- PARA YOUTUBE:
+                                     Cole aqui: <iframe src="https://www.youtube.com/embed/SEU_ID" ...></iframe> 
+                                -->
+                                <!-- PARA FACEBOOK:
+                                     Cole aqui: <iframe src="https://www.facebook.com/plugins/video.php?href=..." ...></iframe>
+                                -->
                                 <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
@@ -178,6 +190,13 @@
                         </div>
                         <div class="p-4">
                             <div class="video-container">
+                                <!-- PARA YOUTUBE:
+                                     Cole aqui: <iframe src="https://www.youtube.com/embed/SEU_ID" ...></iframe> 
+                                -->
+                                <!-- PARA FACEBOOK:
+                                     Cole aqui: <iframe src="https://www.facebook.com/plugins/video.php?href=..." ...></iframe>
+                                -->
+                                <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fiepafontededeus%2Fvideos%2F1171612045087303%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
                                 <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
