--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -196,7 +196,7 @@
                                 <!-- PARA FACEBOOK:
                                      Cole aqui: <iframe src="https://www.facebook.com/plugins/video.php?href=..." ...></iframe>
                                 -->
-                                <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fiepafontededeus%2Fvideos%2F1171612045087303%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/MCV39Ti6Zzc?si=yhVeOgLxCuedoav6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="absolute inset-0 flex items-center justify-center bg-gray-100 dark:bg-gray-800 text-gray-500">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
