--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -206,7 +206,7 @@
                                 <!-- ========================================================== -->
                                 <!--       COLE O SEU CÓDIGO IFRAME ABAIXO DESTA LINHA        -->
                                 <!-- ========================================================== -->
-                                
+                                <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fiepafontededeus%2Fvideos%2F1171612045087303%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 
                                 <div class="video-placeholder bg-gray-100 dark:bg-gray-800 text-gray-500">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
