--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -177,6 +177,7 @@
                         <div class="p-4">
                             <div class="video-container">
                                 <!-- COLE SEU IFRAME AQUI -->
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F1CXsxPcvkF%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                                 <div class="video-placeholder bg-gray-700 text-gray-400">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
