--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -217,6 +217,7 @@
                         <div class="p-4">
                             <div class="video-container">
                                 <!-- COLE SEU IFRAME AQUI -->
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D865102970024252%26id%3D100064420703391%26mibextid%3DNnVzG8&width=500&show_text=false&height=281&appId" width="500" height="281" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
                                 <div class="video-placeholder bg-gray-700 text-gray-400">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
