--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -191,7 +191,7 @@
                                   <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
                                   <span class="relative inline-flex rounded-full h-2.5 w-2.5 bg-red-600"></span>
                                 </span>
-                                <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Programação Normal
+                                <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Culto de Quarta
                             </div>
 
                             <!-- 2. OPÇÃO OFFLINE (Cinza Estático) - DESCOMENTE PARA USAR
@@ -231,7 +231,7 @@
                                   <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
                                   <span class="relative inline-flex rounded-full h-2.5 w-2.5 bg-red-600"></span>
                                 </span>
-                                <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Programação Normal
+                                <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Culto de Quarta
                             </div>
 
                              <!-- 2. OFFLINE (Descomente para usar)
