--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -273,7 +273,7 @@
                                 <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Programação Normal
                             </div>
                             -->
-                            <!-- 2. OFFLINE
+                            <!-- 2. OFFLINE -->
                             <div class="mt-3 p-3 bg-gray-700 rounded border border-gray-600 text-sm flex items-center justify-center gap-2 text-gray-400">
                                 <span class="relative flex h-2.5 w-2.5">
                                   <span class="relative inline-flex rounded-full h-2.5 w-2.5 bg-gray-500"></span>
