--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -145,7 +145,7 @@
                             
                             <!-- ========== CONTROLE DE STATUS (ONLINE / OFFLINE) ========== -->
                             
-                            <!-- 1. OPÇÃO ONLINE (Vermelho Pulsante)
+                            <!-- 1. OPÇÃO ONLINE (Vermelho Pulsante) --->
                             <div class="mt-3 p-3 bg-gray-700 rounded border border-gray-600 text-sm flex items-center justify-center gap-2 text-gray-300">
                                 <span class="relative flex h-2.5 w-2.5">
                                   <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
@@ -153,7 +153,7 @@
                                 </span>
                                 <span class="font-bold text-amber-500 uppercase text-xs">No Ar:</span> Culto Ao Vivo
                             </div>
--->
+--->
                             <!-- 2. OPÇÃO OFFLINE (Cinza Estático) -->
                             <div class="mt-3 p-3 bg-gray-700 rounded border border-gray-600 text-sm flex items-center justify-center gap-2 text-gray-400">
                                 <span class="relative flex h-2.5 w-2.5">
