--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <h3 class="text-2xl font-bold mb-6 text-white">Sábado</h3>
                             <div class="space-y-4 text-left flex-grow">
                                 <div><p class="font-semibold text-gray-200">Em todas as igrejas:</p><p class="text-sm text-gray-400">09h00 - Consagração</p></div>
-                                <div><p class="font-semibold text-gray-200">Canta Galo:</p><p class="text-sm text-gray-400">10h00 - Curso do Batismo<br>18h30 - Chá das Mulheres</p></div>
+                                <div><p class="font-semibold text-gray-200">Canta Galo:</p><p class="text-sm text-gray-400">18h30 - Chá das Mulheres</p></div>
                                 <div><p class="font-semibold text-gray-200">Rincão:</p><p class="text-sm text-gray-400">15h00 - Tarde da Benção</p></div>
                             </div>
                         </div>
@@ -229,8 +229,6 @@
                     <button id="prev-eventos" class="p-3 bg-gray-700 text-gray-200 rounded-full shadow-lg transition-transform duration-300 transform hover:scale-110 mr-4 z-10"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg></button>
                     <div id="eventos-carousel-viewport" class="w-full overflow-hidden">
                         <div class="carousel-wrapper flex">
-                            <div class="carousel-item p-4"><div class="bg-gray-900 p-6 rounded-2xl shadow-lg h-full border border-gray-700"><p class="text-sm text-gray-400 font-bold mb-2">29 de Novembro de 2025 - 10h00</p><h3 class="text-xl font-bold mb-2 text-white">Curso do Batismo</h3><p class="text-gray-400">Curso dedicado aqueles que irão se batizar.<br>Filial Canta Galo</p></div></div>
-                            <div class="carousel-item p-4"><div class="bg-gray-900 p-6 rounded-2xl shadow-lg h-full border border-gray-700"><p class="text-sm text-gray-400 font-bold mb-2">30 de Novembro de 2025 - 09h00</p><h3 class="text-xl font-bold mb-2 text-white">Batismo</h3><p class="text-gray-400">Batismo nas águas realizado por nosso pastor Jesus Magalhães.</p></div></div>
                             <div class="carousel-item p-4"><div class="bg-gray-900 p-6 rounded-2xl shadow-lg h-full border border-gray-700"><p class="text-sm text-gray-400 font-bold mb-2">6 de Dezembro de 2025 - 18h30</p><h3 class="text-xl font-bold mb-2 text-white">Chá das Mulheres</h3><p class="text-gray-400">Um encontro com palavra, louvor e comunhão, apenas para as varoas.<br>Filial Canta Galo</p></div></div>
                             <div class="carousel-item p-4"><div class="bg-gray-900 p-6 rounded-2xl shadow-lg h-full border border-gray-700"><p class="text-sm text-gray-400 font-bold mb-2">13 de Dezembro de 2025 - 18h00</p><h3 class="text-xl font-bold mb-2 text-white">Santa Ceia</h3><p class="text-gray-400">Celebração do pão e do vinho em representação ao sangue e corpo de cristo.<br>Filial Canta Galo</p></div></div>
                             <div class="carousel-item p-4"><div class="bg-gray-900 p-6 rounded-2xl shadow-lg h-full border border-gray-700"><p class="text-sm text-gray-400 font-bold mb-2">20 de Dezembro de 2025 - 18h30</p><h3 class="text-xl font-bold mb-2 text-white">Culto de Ação de Graças Local</h3><p class="text-gray-400">Culto local de ação de graças para agradecer a Deus pelo ano.<br>Filial Rincão</p></div></div>
