--- a/index.html
+++ b/index.html
@@ -338,21 +338,21 @@
                             <div class="shadow-xl transform transition-transform duration-300 hover:scale-105">
                                 <div class="video-container">
                                     <!-- ALTERAR: Cole o código de incorporação do YouTube aqui, trocando a URL -->
-                                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/O_4PXyIDu2o?si=jtKb9omp3-9Jk7Ld" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                             <!-- Vídeo 5 -->
                             <div class="shadow-xl transform transition-transform duration-300 hover:scale-105">
                                 <div class="video-container">
                                     <!-- ALTERAR: Cole o código de incorporação do YouTube aqui, trocando a URL -->
-                                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bMWF-5Zg3do?si=Cob1gkWBwUQkPdJg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                             <!-- Vídeo 6 -->
                             <div class="shadow-xl transform transition-transform duration-300 hover:scale-105">
                                 <div class="video-container">
                                    <!-- ALTERAR: Cole o código de incorporação do YouTube aqui, trocando a URL -->
-                                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/n4u9PhAsxEw?si=LK6Hn9DqYi-Ghiik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
