--- a/index.html
+++ b/index.html
@@ -307,21 +307,21 @@
                             <div class="shadow-xl transform transition-transform duration-300 hover:scale-105">
                                 <div class="video-container">
                                     <!-- ALTERAR: Cole o código de incorporação do YouTube aqui, trocando a URL -->
-                                    <iframe src="https://relay.openwave.net.br/youtube-sec.html?v=IaB6c_90E6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hGXbrCzeqL4?si=SHXYrZPmYHdhOZRm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                             <!-- Vídeo 2 -->
                             <div class="shadow-xl transform transition-transform duration-300 hover:scale-105">
                                 <div class="video-container">
                                     <!-- ALTERAR: Cole o código de incorporação do YouTube aqui, trocando a URL -->
-                                    <iframe src="https://relay.openwave.net.br/youtube-sec.html?v=tF8YBz73lcI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/MCV39Ti6Zzc?si=jtJ-FQbO-7go7vS6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                             <!-- Vídeo 3 -->
                             <div class="shadow-xl transform transition-transform duration-300 hover:scale-105">
                                 <div class="video-container">
                                    <!-- ALTERAR: Cole o código de incorporação do YouTube aqui, trocando a URL -->
-                                    <iframe src="https://relay.openwave.net.br/youtube-sec.html?v=NWfxESV7hqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dgtibshCSBw?si=k1YFQgAQode72fJz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
