--- a/aovivo/index.html
+++ b/aovivo/index.html
@@ -138,6 +138,7 @@
                         <div class="p-4">
                             <div class="video-container">
                                 <!-- COLE SEU IFRAME AQUI -->
+                                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fiepafontededeus%2Fvideos%2F2300368477148649%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
                                 <div class="video-placeholder bg-gray-700 text-gray-400">
                                     <p class="text-center px-4 font-semibold">Aguardando transmissão...</p>
                                 </div>
